analysis/_assets/styles.css
/* Charts */

.chart-repo {
    position: absolute;
    top: 123px;
    left: 133px;
}

.chart-data {
    position: absolute;
    top: 100px;
    left: 460px;
}

body {
    font-family: arial, sans-serif;
    margin: 0;
    box-sizing: border-box;
    -moz-box-sizing: border-box;
}

#mainWrap {
    min-width: 1100px;
}

#mainWrap.pinned,
#fixedHeader.pinned {
    margin-left: 420px;
}

#fixedHeader.pinned .introduction {
    margin-left: 20px;
}

#mainWrap.pinned .introduction,
#mainWrap.pinned .conventionWrap {
    padding-left: 20px;
}

/* Convention Details */


.conventionWrap {
    border-bottom: 1px solid #e2e2e2;
    box-shadow: 0 1px 3px rgba(0,0,0,0.1);
}

.conventionDetails {
    padding: 75px 0;
    width: 920px;
    margin: 0 auto;
}

.conventionDetails h1 {
    color: #354a5d;
    font-size: 24px;
    font-weight: bold;
    margin: 0;
}

.conventionDetails p {
    font-size: 16px;
    color: #1d2329;
    margin: 14px 0;
}

/* Current Data */

.currentData {
    border-top: 1px solid #bfbfbf;
    padding: 25px 0;
    position: relative;
}

.currentDataWrap {
    display: table;
    margin-left: 65px;
    margin-top: 6px;
}

.currentChart {
    width: 290px;
    height: 290px;
    display: table-cell;
}

/* Convention status in project */

.conventionStatusInProject.project {
    position: absolute;
    top: 0;
    right: 0;
    padding-right: 42px;
    padding-top: 8px;
}

.conventionStatusInProject.combined {
    display: none;
}

.conventionStatusInProject p.projectStatusText {
    color: #2d3e4f;
    font-size: 13px;
    font-style: italic;
    margin: 0;
}

.conventionStatus {
    width: 29px; 
    height: 38px;
    position: absolute; 
    top: 0; 
    right:0; 
    margin-top: -1px;
    background-image: url(image_sprite_1x.png);
    background-repeat: no-repeat;
}

.conventionStatusInProject.true .conventionStatus {
    background-position: 0 0;
}

.conventionStatusInProject.false .conventionStatus {
    background-position: 0 -39px;
}

/* Table */

.tableContainer {
    display: inline-block;
    display: table-cell;
    vertical-align: middle;
}

table.statsTable {
    margin: 0 auto 0 65px;
    vertical-align: middle;
    border-collapse: collapse;
}

.statsTable td {
    padding: 12px;
    margin: 0;
    border-top: 1px solid #969fa7;
    border-left: 1px solid #c7c7c7;
    font-size: 16px;
    color: #2e374d;
    font-weight: bold;
}

.statsTable td a {
    font-size: 13px;
    font-weight: normal;
    text-decoration: none; 
    border-bottom: 1px solid #78c9cf;
    color: #2e374d;
}

.statsTable tr:last-child td {
    border-bottom: 1px solid #969fa7;
}

.statsTable td:last-child {
    border-right: 1px solid #969fa7;
}

.statsTable .key {
    width: 10px;
}

.statsTable .keypopular:after {
    background-image: url(image_sprite_1x.png);
    content: "";
    width: 13px;
    height: 13px;
    background-repeat: no-repeat;
    background-position: 0 -78px;
    display: block;
}

.statsTable .value {
    width: 225px;
}

.statsTable .result {
    width: 75px;
    text-align: center;
}   

p.statsInfo {
    width: 386px;
    margin-left: 65px;
    text-align: center;
    color: #2e374d;
    font-size: 13px;
    font-style: italic;
    margin-top: 20px;
}

/* Historical Data */

.historicalData {
    border-top: 1px solid #bfbfbf;
    padding: 25px 0;
}

.historicalChart {
    width: 860px;
    height: 150px;
    margin-left: 65px;
    margin-top: 6px;
    display: inline-block;
}

.tag {
    background-color: #555a59;
    color: #ffffff;
    text-transform: uppercase;
    display: inline-block;
    font-size: 12px;
    font-weight: bold;
    padding: 5px 3px 5px 7px;
    position: relative;
}

.tag:after {
    content: "";
    border: 12px solid #fff;
    border-left: 12px solid #555a59;
    width:0px;
    height: 0px;
    display: block;
    position: absolute;
    right: -24px;
    top: 0;
}

.screenHide {
    display: block;
    position: absolute;
    left: -9999px;
}


/* HEADER */

#contentWrap.small {
    padding-top: 650px;
}

.introductionWrap {
    background: #2c3e4f;
    color: #ffffff;
    position: relative;
    top: 0;
    left: 0;
    width: 100%;
    z-index: 9;
    height: 550px;
}

#introductionWrap.small {
    z-index: -1;
    height: 0px;
}

.introduction {
    width: 920px;
    margin: 0px auto;
    padding: 90px 0 80px;
    position: relative;
}

.icon {
    width: 65px; 
    height: 65px; 
    background-position: 0 -91px;
    background-image: url(image_sprite_1x.png);
    display: block;
}

.introduction h1 {
    color: #ffffff;
    font-size: 40px;
    line-height: 46px;
    font-weight: bold;
    margin-top: 10px;
}

.introduction p {
    color: #ffffff;
    font-size: 16px;
    line-height: 21px;
    width: 640px;
}

.introduction a {
    color: #80dfdd;
    text-decoration: none;
}

.fixedHeader {
    background: #2d3f50;
    color: #ffffff;
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    z-index: 9;
}

.fixedHeader .introduction {
    opacity: 0;
    transition: opacity 0.2s;
    -moz-transition: opacity 0.2s;
    -webkit-transition: opacity 0.2s;
}

/* HEADER SMALL */

.fixedHeader .introduction,
.small .introduction {
    padding: 12px 0 0;
}

.fixedHeader .icon,
.small .icon {
    width: 35px;
    height: 35px;
    background-position: 0 -173px;
    display: inline-block;
}

.fixedHeader .introduction h1,
.small .introduction h1 {
    font-size: 20px;
    line-height: 20px;
    display: inline-block;
    position: relative;
    top: -8px;
    left: 6px;
}

.small .introduction p {
    display: none;
}

.small .currentReportContent {
    width: 920px;
    margin: 0 auto;
    position: relative;
    height: 45px;
}

.small .selectProjectBtn {
    padding: 3px 10px;
    margin-top: -11px;
}

/* FLYOUT OVERLAY */
    
.flyout {
    background: #1f2a36;
    height: 100vh;
    position: fixed;
    left: -372px;
    top: 0;
    box-shadow: 1px 0 3px rgba(0,0,0,0.1);
    z-index: 15;
    color: #ffffff;
    padding: 20px 50px 55px;
    box-sizing: border-box;
    -moz-box-sizing: border-box;
    transition: left 0.3s ease-out;
    -webkit-transition: left 0.3s ease-out;
    -moz-transition: left 0.3s ease-out;
    width: 420px; 
    overflow-y: hidden;
}

#flyoutFixed {
    top: 0;
    left: -352px;
    position: fixed;
    background: #1f2a36;
    width: 400px;
    height: 50px;
    transition: left 0.3s ease-out;
    -webkit-transition: left 0.3s ease-out;
    -moz-transition: left 0.3s ease-out;
    z-index: 16;
}

#flyoutFixed.expanded {
    left: 0;
}

.flyout.expanded .flyoutList {
    width: 372px;
    border-collapse: collapse;
    display: table;
    overflow-y: scroll;
    margin-top: 40px;
}

.flyoutHeader {
    display: block;
    position: relative;
    height: 25px;
    width: 150px;
}

.flyoutFixed h1 {
    margin: 0;
    top: 50%;
    color: #d9d9d9;
    position: absolute;
    font-size: 18px;
    padding-left: 25px;
    margin-top: 0px;
}

.flyout li {
    display: table-row;
    text-decoration: none;
}

.flyout li:hover {
    display: table-row;
    background-color: #2d3d4f;
}

.flyout .td1,
.flyout .td2,
.flyout .td3 {
    font-size: 13px;
    border-bottom: 1px solid #2b3540;
    padding: 6px;
    display: table-cell;
}

.flyout .td1 a {
    color: #e4e9ed;
    width: 98%;
    text-decoration: none;
}

.flyout .td1 a:hover {
    text-decoration: underline;
}

.flyout .td2 {
    text-align: right;
    padding-right: 25px;
    font-weight: bold;
    color: #e4e9ed;
    width: 1%;
    white-space: nowrap;
}

.flyout .td3 {
    color: #ced2d6;
    width: 1%;
}

.flyout.expanded {
    width:420px;
    left: 0;
    overflow-y: scroll;
    padding: 20px 20px 55px;
}

.flyoutControl {
    width: 17px;
    height: 17px;
    background-image: url(image_sprite_1x.png);
    background-position: 0 -156px;
    position: absolute;
    right: 17px;
    top: 17px;
    opacity: 1;
}

.flyoutPin {
    width: 17px;
    height: 17px;
    background-image: url(image_sprite_1x.png);
    background-position: 0 -220px;
    position: absolute;
    right: 50px;
    top: 17px;
    opacity: 1;
    cursor: pointer;
}

.flyoutPin.active {
    background-position: 0 -237px;
}

.highlight {
    color: #82cb8c;
}

/* LIST BOX */

.listBoxWrap {
    position: fixed;
    top: 150px;
    left: 480px;
    z-index: 15;
    padding: 10px;
    background: rgba(28,40,54,0.5);
    display: none;
    border-radius: 5px;
}

.listBoxContent {
    width: 420px;
    background: #efefef;
}

.listBoxClose {
    width: 12px;
    height: 12px;
    display: block;
    position: absolute;
    right: 31px;
    top: 31px;
    background-image: url(image_sprite_1x.png);
    background-position: 0 -208px;
    cursor: pointer;
    z-index: 15;
}

.listBoxHeader {
    background: #efefef;
    position: absolute;
    width: 360px;
    left: 10px;
    top: 10px;
    padding: 15px 20px 5px;
    z-index: 10;
}

.listBoxHeader h3 {
    margin: 0 0 15px 0;
    font-family: 17px;
    color: #2e374d;
}

.listBoxListWrap {
    max-height: 420px;
    overflow-y: scroll;
    padding: 20px;
}

.listBoxList {
    width: 100%; 
    border-collapse: collapse; 
    display: table; 
    list-style: none;
    padding:0;
    margin:0;
    margin-top: 30px;
}

.listBoxList li, .listBoxList a  {
    list-style: none;
    display: table-row;
    color: #000000;
}

#listBoxList .li a {
    display: table-row;
}


.listBoxList li:hover {
    background-color: #f7f7f7;
}

.listBoxList .td1, .listBoxList .td2 {
    color: #000000;
    display: table-cell;
    font-size: 13px;
    border-bottom: 1px solid #dedede;
    padding: 4px;
}

.listBoxList .td1 {
    width: 100%;
}

.footer {
    font-style: italic;
    text-align: center;
    padding: 20px 0;
    background: #f5f5f5;
    box-shadow: 0 1px 6px rgba(0,0,0,0.1) inset;
    font-size: 14px;
    color: #2d3f50;
}

.footer a {
    color: #2d3f50;
}

.backToTop {
    display: block;
    width: 16px;
    height: 16px;
    position: absolute;
    right: 0;
    top: 22px;
    background-image: url(image_sprite_1x.png);
    background-repeat: no-repeat;
    background-position: 0 -254px;
}

@media 
(-webkit-min-device-pixel-ratio: 2) { 
    .icon, small.icon, .conventionStatus, .statsTable .keypopular:after {
        background-image: url(image_sprite_2x.png);
        background-size: 65px 271px; 
    }
}

